--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@cosmjs/launchpad": "^0.27.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
