--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@cosmjs/launchpad": "^0.27.1",
+    "@cosmjs/proto-signing": "^0.32.4",
+    "@cosmjs/stargate": "^0.32.4",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
